   all non-admin participants on a conference.  The confbridge configuration file
   also allows for the default sounds played to all conference users when this
   occurs to be overriden using sound_participants_unmuted and sound_participants_muted.
 * Added menu action participant_count.  This will playback the number of current
   participants in a conference.

Voicemail
------------------
 * Addition of the VM_INFO function - see Dialplan function changes
 * The imapserver, imapport, and imapflags configuration options can now be
   overriden on a user by user basis.

SIP Changes
-----------
 * Asterisk will no longer substitute CID number for CID name into display
   name field if CID number exists without a CID name. This change improves
   compatibility with certain device features such as Avaya IP500's directory
   lookup service.
 * A new setting for autocreatepeer (autocreatepeer=persistent) allows peers
   created using that setting to not be removed during SIP reload.
 * Add support to realtime for the 'callbackextension' option
 * When multiple peers exist with the same address, but differing
   callbackextension options, incoming requests that are matched by address
   will be matched to the peer with the matching callbackextension if it is
   available.
 * NAT settings are now a combinable list of options. The equivalent of the
   deprecated nat=yes is nat=force_rport,comedia. nat=no behaves as before.
 * Two new NAT options, auto_force_rport and auto_comedia, have been added
   which set the force_rport and comedia options automatically if Asterisk
   detects that an incoming SIP request crossed a NAT after being sent by
   the remote endpoint.
 * Adds an option send_diversion which can be disabled to prevent
   diversion headers from automatically being added to invites.

Chan_local changes
------------------
 * Added a manager event "LocalBridge" for local channel call bridges between
   the two pseudo-channels created.

Chan_dahdi changes